fix header white space

--- a/stylesheets/index-stylesheet.css
+++ b/stylesheets/index-stylesheet.css
@@ -1,6 +1,5 @@
 * {
-  text-align: center
-  margin: 0 auto;
+  text-align: center;
   /*border: 1px solid black;*/
 }
 
